# mindforge

./: .gitignore  AGENT_TASKS.md  BENCHMARK_IMPLEMENTATION.md  BENCHMARK_QUICKSTART.md  CHANGELOG.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_SUMMARY_TOOLS.md  README.md  SUPEREGO_IMPLEMENTATION.md  conch_dashboard.py  conch_monitor.py  config.yaml  consciousness_interface.py  fine_tune_qwen.py  main.py  ollama_modelfile  pyproject.toml  requirements.txt  run.sh  run_benchmark.py  test_complex_tasks.py  test_conch_dna_full.py  test_conch_full.py  test_consciousness_build.py  test_consciousness_extended.py  test_consciousness_interface.py  test_meta_quality.py  test_mindforge_dna_full.py  test_mindforge_full.py  test_practical_tasks.py  test_superego.py  test_tools.py  train_neurons_v2.py
artifacts/: action_plan.json  debug_report.json  ego_design.txt  memory_eval.json  reflect_note.json  task_plan.json  think_thought.txt
artifacts/consciousness_extended/: api_client_20251215_193017.json  data_pipeline_20251215_192636.json  dual_agent_code_20251215_193754.json  dual_agent_debate_20251215_205630.json  (+7 more)
conch/: __init__.py  cli.py  config.py
conch_dna/: main.py
dashboard/: app.py
data/: complex_task_results.json  haiku.txt  memories.db.backup  reflection_examples.jsonl  tool_use_examples.jsonl  training_examples.jsonl
docs/: AGGRESSIVE_IMPLEMENTATION_PLAN.md  BENCHMARK_SUITE.md  CONSCIOUSNESS_SYSTEM.md  CONSCIOUSNESS_TESTING.md  DNA_NEURON_PIVOT_RESEARCH.md  EXTENDED_CONSCIOUSNESS_TESTING.md  KVRM-WHITEPAPER.md  META_QUALITY_TESTING.md  MINDFORGE_COMPLETE_DOCUMENTATION.md  MINDFORGE_DNA_FINAL_ARCHITECTURE.md  MINDFORGE_DNA_QUICKREF.md  PROJECT_ASSESSMENT.md  README.md  REWARD_LEARNING_SYSTEM.md  TEST_RESULTS.md  kvrm-whitepaper.tex
examples/: benchmark_example.py  tools_demo.py
mindforge/: __init__.py  cli.py  config.py
mindforge_dna/: main.py
scripts/: test_pm1000_live.py  train_conch.py  train_mindforge.py  validate_benchmark.py
tests/: __init__.py  capability_tests.py  comprehensive_agent_test.py  test_agent_integration.py  test_agents.py  test_autonomy_phase0.py  test_autonomy_phase1.py  test_autonomy_phase2.py  test_core.py  test_journal.py  test_kvrm.py  test_memory.py  test_task_list.py  test_tools.py  test_training.py
whitepaper/: Makefile  conch_dna.tex  consciousness_testing.tex  extended_consciousness_testing.tex  meta_quality_testing.tex  mindforge_dna.tex  references.bib
(+217 files in other folders)
