[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindforge"
version = "0.1.0"
description = "An always-on, always-thinking, always-learning AI assistant engine with good-hearted consciousness simulation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bobby Price" }
]
keywords = ["ai", "consciousness", "assistant", "fine-tuning", "mlx", "qwen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "datasets>=2.18.0",
    "safetensors>=0.4.0",

    # MLX for Apple Silicon (primary backend)
    "mlx>=0.10.0; sys_platform == 'darwin'",
    "mlx-lm>=0.12.0; sys_platform == 'darwin'",

    # Memory & Storage
    "chromadb>=0.4.24",
    "sqlite-utils>=3.36",

    # Embeddings
    "sentence-transformers>=2.6.0",

    # Utilities
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "watchdog>=4.0.0",
    "schedule>=1.2.0",
    "psutil>=5.9.0",

    # Evaluation
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
llamacpp = [
    "llama-cpp-python>=0.2.56",
]
quantization = [
    "bitsandbytes>=0.42.0; sys_platform == 'linux'",
]

[project.scripts]
mindforge = "mindforge.cli:app"
mf-train = "mindforge.training.cli:train"
mf-daemon = "mindforge.scheduler.daemon:run"

[tool.hatch.build.targets.wheel]
packages = ["mindforge"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
